fix(comp: alert): align icon with text (#881)

--- a/packages/components/back-top/style/themes/seer.variable.less
+++ b/packages/components/back-top/style/themes/seer.variable.less
@@ -2,3 +2,5 @@
 
 @back-top-color: @color-primary-l30;
 @back-top-hover-color: @color-primary;
+
+@back-top-font-size: 32px;
